syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.setokk.astrocluster";
option java_outer_classname = "ClusterProto";

package cluster.proto;

message ClusterRequest {
    string path = 1;
    string lang = 2;
    repeated string extensions = 3;
}

message ClusterResponse {
    int32 status = 1;
}

service ClusterService {
    rpc PerformClustering (ClusterRequest) returns (ClusterResponse);
}